--- a/.travis.yml
+++ b/.travis.yml
@@ -21,13 +21,11 @@ cache:
   - $HOME/.sbt/boot/
   - $HOME/.coursier
 
-jobs:
-  - stage: Tests
-  script:
-    - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false clean coverage test
-    - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false coverageReport
-    - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false coverageAggregate
-    - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false codacyCoverage
+script:
+  - sbt clean coverage test
+  - sbt coverageReport
+  - sbt coverageAggregate
+  - sbt codacyCoverage
 
-    - echo "testing successful"
-    - echo "Finished! hmmm :)"
+  - echo "testing successful"
+  - echo "Finished! hmmm :)"
