moved all commands to separate file

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,11 +22,4 @@ cache:
   - $HOME/.coursier
 
 script:
-  - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false clean coverage test
-  - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false coverageReport
-  - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false coverageAggregate
-  - sbt ++$TRAVIS_SCALA_VERSION -DscalaFmtEnabled=false -DhammerEnabled=false codacyCoverage
-
-  - echo "testing successful $CODACY_PROJECT_TOKEN"
-  - echo "Finished! hmmm :)"
-  - echo $CODACY_PROJECT_TOKEN
+    - testCoverage.sh
